# DreamCreator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  buildThirdParty.sh  package.sh  resources.qrc
data/icon/: app.icns
data/scene/: scene.json  test.pag
data/shaders/: ImageLayer.frag  ImageLayer.vert
src/: Test.cpp
src/common/: Common.h  Config.h  Shader.h
src/rendering/: OpenglWidget.cpp  OpenglWidget.h  Player.cpp  Player.h
src/rendering/Layer/: CompositionLayer.cpp  CompositionLayer.h  ImageLayer.cpp  ImageLayer.h  Layer.cpp  Layer.h  RootNode.cpp  RootNode.h
src/rendering/footage/: Footage.cpp  Footage.h  ImageFootage.cpp  ImageFootage.h  PAGFootage.cpp  PAGFootage.h  VideoFootage.cpp  VideoFootage.h
src/rendering/layer/: PAGLayer.cpp  PAGLayer.h
src/rendering/track/: FootageTrack.cpp  FootageTrack.h  Track.cpp  Track.h
src/scene/: ContentWidget.cpp  ContentWidget.h  EditorWindow.cpp  EditorWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  ProcessDlg.cpp  ProcessDlg.h  PropertyWidget.cpp  PropertyWidget.h  StartWindow.cpp  StartWindow.h  TrackEditor.cpp  TrackEditor.h  VideoPlayer.cpp  VideoPlayer.h  WindowManager.cpp  WindowManager.h
src/scene/widget/: ContainerWidget.cpp  ContainerWidget.h  DividingRule.cpp  DividingRule.h  FootageWidget.cpp  FootageWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  ProcessDlg.cpp  TrackControllerWidget.cpp  TrackControllerWidget.h  TrackLineWidget.cpp  TrackLineWidget.h  VideoPlayer.cpp  VideoPlayer.h
src/scene/widget/treeView/: CompleterLineEdit.cpp  CompleterLineEdit.h  DoubleSliderWidget.cpp  DoubleSliderWidget.h  PropertyTreeWidget.cpp  PropertyTreeWidget.h
src/scene/window/: ContentWindow.cpp  ContentWindow.h  PlayerWindow.cpp  PlayerWindow.h  PropertyWindow.cpp  PropertyWindow.h  ResourcesWindow.cpp  ResourcesWindow.h  TrackWindow.cpp  TrackWindow.h
src/shaders/: ImageLayer.frag  ImageLayer.vert
src/utils/: GLColor.cpp  GLUtils.cpp  GLUtils.h  GlobalMsgMgr.h  LogUtils.h  Rect.cpp  Shader.h  TTSUtils.cpp  TTSUtils.h  Types.h
